@@ -2,12 +2,14 @@ AUX modprobe_i915.conf 85 RMD160 7a897deae5fa6c952def82d57af86e4768c8978d SHA1 0
 DIST calculate-sources-2.6.32.tar.bz2 133992 RMD160 6c8ad119807c591ad926435dad7986098f26e3ef SHA1 2b398bf6e9a6bceca26e3df42c471c9321c0a6f2 SHA256 b30e70642569bae7dff4c9b2046066774c6a8e2a2c1252b353b908824cf64bc4
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST patch-2.6.32.10.bz2 295315 RMD160 dfb8ae6307bbf4532115b19c116599f10fe77d3d SHA1 2f9e8c649245bb3efe3a56b6a9b8aa7376ca868e SHA256 e4b760254822dbc77ae1889d0b2078c113cb7939f8c6ee31c49a31b07b52cc18
+DIST patch-2.6.32.11.bz2 329750 RMD160 0cad04dc572cf2635a81880b0c10ec3c51d4bd37 SHA1 239fb8959a7c1dfc0677e750f683aed98f9f785a SHA256 edb26ff62b2f95b0d6e5c434d777af2815600a990f1c7c5d2c7faad9b4e4bc2b
 DIST patch-2.6.32.7.bz2 173502 RMD160 27dabad80c93856ccb6e612c3bbc2393715d0d2d SHA1 5d8627efca2385cd0b99c36e0eb373a6e211b149 SHA256 b3382d02ec25e3ae86fac7852ba540e59af770a76604d317b39df57505b376bf
 DIST patch-2.6.32.8.bz2 205390 RMD160 f526d5c4819793161f6e350de0875e49cbd1a6b0 SHA1 7ef9194f599eb1bb2103c7094074c86d23f00710 SHA256 50c08a7ffcad1e7cd2e7c2c906795896dd36ce71249d816914c306dcc5875fd2
 DIST patch-2.6.32.9.bz2 236949 RMD160 b52487fadf2b125511d600375ea8d9dd6e17ebef SHA1 297d60161cd35dadd599e86ddbbb77f8f41a7f23 SHA256 8aeb15c31fb09c769f004c8dc51e29aa26be8e84d70db418af70ecefc463459a
 EBUILD calculate-sources-2.6.32.10.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
+EBUILD calculate-sources-2.6.32.11.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
 EBUILD calculate-sources-2.6.32.7.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
 EBUILD calculate-sources-2.6.32.8.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
 EBUILD calculate-sources-2.6.32.9.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
-MISC ChangeLog 647 RMD160 f59b7a11a3ffb8dd9cccdd687b741c87aa4d1451 SHA1 73788933bd93af678ddd355ef8b9f36c4a5ce42c SHA256 2e5b5d11a7062a3628e9b1e4140af85965db4dc5ae5042afdbfa758e380c9a14
+MISC ChangeLog 837 RMD160 32636aa95bb5286a415e3299853b925bb2a3441b SHA1 81b8b2e95117b15ea7055092051e7d6189ab8ca4 SHA256 e4e268f42fa19aced2724c595b72e9664bb3253c8ff158a328eb06fdfe1b65ad
 MISC metadata.xml 364 RMD160 308abbf758102b5591c353f41a62be6836f98693 SHA1 5029bd7cf897e4eb8f8e8fa935c02d4c73eb59db SHA256 0bee25282d797e432206373a8535689412a3f76f8974315f8ecf73536bf0e505
