@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.32.11 (02 Apr 2010)
+
+  02 Apr 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-sources-2.6.32.11.ebuild:
+  Add calculate-sources-2.6.32.11.ebuild
+
   29 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-sources-2.6.32.7.ebuild, calculate-sources-2.6.32.8.ebuild,
   calculate-sources-2.6.32.9.ebuild, calculate-sources-2.6.32.10.ebuild:
